--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body{
 }
 .header{
     height: 1000px;
-    background-color: rgb(255,251, 240);
+    background-color: #fff1cb;;
 }
 .button-style{
     background-color: rgb(153, 178, 54);
@@ -40,4 +40,13 @@ body{
 .hero-section-second-div img{
     height: 600px;
     margin-left: 30%;
+}
+.product-cat-title h3{
+    font-family: Bebas Neue;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 48px;
+    line-height: 48px;
+    color: #363958;
+    margin-top: 100px;
 }
