--- a/css/style.css
+++ b/css/style.css
@@ -66,3 +66,80 @@ body{
     box-shadow: 0 5px 20px rgba(109, 109, 109, 0.12);
 }
 
+
+/*  */
+
+
+.card {
+    border: none;
+    box-shadow: 0 5px 20px rgba(109, 109, 109, 0.12);
+    border-radius: 10px;
+}
+
+.card img {
+    padding-top: 30px;
+    width: 75%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+}
+.box{
+    height: 200px;
+    width: 300px;
+}
+.faria img{
+    width: 100%;
+    
+    height: 100%;
+}
+.faria1{
+    height: 800px;
+    padding-top: 100px;
+}
+.forth-section{
+    margin-top: 150px;
+}
+
+/* extra */
+.contact-info img,
+.social-media img {
+    width: 16px;
+    height: 16px;
+}
+
+.contact-info img {
+    margin-right: 10px;
+}
+
+.social-media li a {
+    display: block;
+    text-align: center;
+    width: 28px;
+    height: 28px;
+    background-color: #000000;
+    border-radius: 50%;
+}
+
+.social-media li a:hover {
+    background-color: limegreen;
+}
+.newsletter{
+    margin-top: 15%;
+    margin-bottom: 10%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
